--- a/deep-learning-with-pytorch-step-by-step/Part-II-Computer-Vision/02_convolutions.ipynb
+++ b/deep-learning-with-pytorch-step-by-step/Part-II-Computer-Vision/02_convolutions.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyM6vY6OfkgyUn20DsIJgUfQ",
+      "authorship_tag": "ABX9TyPmPzGJl1SR/qiRe35OLnyM",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -67,7 +67,7 @@
       ],
       "metadata": {
         "id": "iiQ_qcSp_Uq6",
-        "outputId": "c7889ef9-c3c2-49f4-d5d3-da048d640ba9",
+        "outputId": "9baaa3d2-5647-4e74-85f4-a68bf522aae2",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 17
@@ -108,7 +108,7 @@
       ],
       "metadata": {
         "id": "6EwSrmrQ_cxf",
-        "outputId": "0efadc52-7dfa-44f4-c579-ddef7cd2d094",
+        "outputId": "a3855735-cb25-4e76-c8fd-5569a7167f19",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -196,7 +196,7 @@
       ],
       "metadata": {
         "id": "jPyifdt-AUSX",
-        "outputId": "ac9f896d-17f6-4a0e-fa8a-f99f45857af0",
+        "outputId": "5178bd85-daa7-4278-8476-4e9a67fca608",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -231,7 +231,7 @@
       ],
       "metadata": {
         "id": "oiO3F9UGFO9G",
-        "outputId": "2563496e-d0b4-4118-a930-ce8ba4ff7e26",
+        "outputId": "e68b2fa9-8136-4247-dba8-aa8a4262bee0",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -281,7 +281,7 @@
       ],
       "metadata": {
         "id": "CVEwetTtF1H2",
-        "outputId": "36f1c895-1081-4b27-b6f6-db35874869e0",
+        "outputId": "e11d74d5-c9c2-486d-ae01-7a65985bd0a3",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -367,7 +367,7 @@
       ],
       "metadata": {
         "id": "tu1Xmj6HJOyX",
-        "outputId": "20662c07-f22f-45cc-c2c5-5d311852aac7",
+        "outputId": "2b826b6c-29e6-48b2-9cd7-42072eba619e",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -437,7 +437,7 @@
       ],
       "metadata": {
         "id": "zcWMNoMCK5w_",
-        "outputId": "d97c72ac-d3e3-4ac9-f06b-cca02825c0f0",
+        "outputId": "601bae47-6473-4c4e-86f5-5180a2b629da",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -557,7 +557,7 @@
       ],
       "metadata": {
         "id": "Fm6TCTCpYfRF",
-        "outputId": "8a52e0cb-5205-484b-cb41-10ea773dd537",
+        "outputId": "34c33d7d-be60-49ac-caf7-84c1d9b89ccd",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -596,7 +596,7 @@
       ],
       "metadata": {
         "id": "UxDu6pa1ZwRu",
-        "outputId": "9997ccc1-460c-4673-f144-da9ba68c48c4",
+        "outputId": "a7979750-ed3e-460d-8e39-46098a65cf07",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -607,10 +607,10 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "tensor([[[[ 0.8820,  0.4062,  0.2817,  1.5887],\n",
-              "          [ 0.0191, -0.9643,  0.5636,  3.3181],\n",
-              "          [-1.0559,  2.7100,  2.7556,  0.6045],\n",
-              "          [-0.7896,  2.6753, -1.1944,  0.0915]]]],\n",
+              "tensor([[[[-2.3728, -1.3317, -2.7728, -5.1623],\n",
+              "          [-2.2198, -5.3178, -4.2968, -2.4332],\n",
+              "          [-3.4857, -2.5025, -0.6904, -2.0167],\n",
+              "          [-2.6422, -4.2359, -1.5154, -0.9297]]]],\n",
               "       grad_fn=<ConvolutionBackward0>)"
             ]
           },
@@ -646,7 +646,7 @@
       ],
       "metadata": {
         "id": "-tkVCkuuasJi",
-        "outputId": "7f077f2f-525e-48f6-ce1d-1d6b3e44a7ab",
+        "outputId": "ca214170-a737-4544-c424-49ea25a21375",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -657,15 +657,15 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "tensor([[[[-1.1705, -1.2468, -4.0579, -1.5479],\n",
-              "          [ 0.6243, -1.2421, -1.9803, -0.1834],\n",
-              "          [-0.1060, -0.4989,  0.2974, -0.6732],\n",
-              "          [-2.1971, -2.5529, -0.8409, -2.5031]],\n",
+              "tensor([[[[-2.7091, -1.5468, -1.5830,  2.2820],\n",
+              "          [ 1.0947,  3.3581, -2.6535, -0.7231],\n",
+              "          [-2.3230, -2.0331, -1.5482, -1.1157],\n",
+              "          [-1.6571,  1.7232, -0.3608,  1.1142]],\n",
               "\n",
-              "         [[ 1.1262, -3.6420, -5.5226, -1.8505],\n",
-              "          [-2.1685, -1.8353, -1.4486, -0.2474],\n",
-              "          [-1.8547, -0.9527,  0.6492, -1.3059],\n",
-              "          [-4.7021, -0.6391, -1.6691, -3.7373]]]],\n",
+              "         [[ 2.8025,  6.5085,  5.1363,  6.2798],\n",
+              "          [ 5.4482,  3.0193,  5.0466,  7.4039],\n",
+              "          [ 5.7044,  7.6669,  5.3536,  5.1414],\n",
+              "          [ 5.4464,  5.2953,  2.7431,  2.8355]]]],\n",
               "       grad_fn=<ConvolutionBackward0>)"
             ]
           },
@@ -681,7 +681,7 @@
       ],
       "metadata": {
         "id": "ToKEQ1v1a_fp",
-        "outputId": "70a7faed-189e-4bcf-9efa-ae9ba073a4b3",
+        "outputId": "d0c414b3-ff8d-481a-8441-85fd678eb134",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -693,14 +693,14 @@
           "data": {
             "text/plain": [
               "Parameter containing:\n",
-              "tensor([[[[-0.2645,  0.0150, -0.2001],\n",
-              "          [ 0.0312,  0.0702, -0.0533],\n",
-              "          [ 0.2903, -0.0430, -0.0631]]],\n",
+              "tensor([[[[ 0.2363,  0.2740, -0.3291],\n",
+              "          [-0.1401,  0.0146, -0.2966],\n",
+              "          [ 0.0932,  0.2671, -0.2277]]],\n",
               "\n",
               "\n",
-              "        [[[-0.1908, -0.1760, -0.0484],\n",
-              "          [-0.1987,  0.2254, -0.0403],\n",
-              "          [ 0.2756,  0.0979, -0.3075]]]], requires_grad=True)"
+              "        [[[-0.1754,  0.1838,  0.0351],\n",
+              "          [ 0.1815,  0.2520,  0.2026],\n",
+              "          [-0.1517,  0.2383,  0.2876]]]], requires_grad=True)"
             ]
           },
           "metadata": {},
@@ -728,7 +728,7 @@
       ],
       "metadata": {
         "id": "uzMNjIh6dMBq",
-        "outputId": "ac49d1c7-d5dc-4fc8-fdf1-55908009ac18",
+        "outputId": "77d37efe-559e-43c7-c46c-00a52c3d8ae9",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -757,7 +757,7 @@
       ],
       "metadata": {
         "id": "b5TEqL4ud8zW",
-        "outputId": "3abb397b-e36a-4d9b-fbac-336191352b3a",
+        "outputId": "403040ba-90f4-402a-9253-158aea38f1ac",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -843,7 +843,7 @@
       ],
       "metadata": {
         "id": "NSgTQekvyu-3",
-        "outputId": "c6309250-ef2f-48b3-9848-5b8cdc736082",
+        "outputId": "686bafac-b607-4ea5-eb89-8e03bae9981c",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -918,7 +918,7 @@
       ],
       "metadata": {
         "id": "GIuPaIjY0dxq",
-        "outputId": "9b611aca-7d0a-4a62-dbcf-43b65caa3976",
+        "outputId": "76ff1692-6bec-4476-8569-ec04df175866",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -967,7 +967,7 @@
       ],
       "metadata": {
         "id": "wrfPCPMz1yCk",
-        "outputId": "ea16029e-30a6-48f9-9c28-e2ed873b7731",
+        "outputId": "98b28ee9-ad0a-4972-c71d-3e652228cd1e",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1023,7 +1023,7 @@
       ],
       "metadata": {
         "id": "JtIfohjj4Bss",
-        "outputId": "c9f6675e-5a2f-4464-fc52-2a97ec792b39",
+        "outputId": "259c347e-4cb6-4e47-b3f9-e41704f97792",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1057,12 +1057,12 @@
       ],
       "metadata": {
         "id": "bTbOtd1_4el9",
-        "outputId": "a2c8f7e6-dc41-4ad6-ffea-781f5433c998",
+        "outputId": "69f5c0e9-9036-405a-edc0-10f7b29dce12",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 26,
+      "execution_count": 22,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1079,7 +1079,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 26
+          "execution_count": 22
         }
       ]
     },
@@ -1104,7 +1104,7 @@
       ],
       "metadata": {
         "id": "bE-tinAm44rs",
-        "outputId": "e9fb61d9-5d5f-4611-a31f-6f37b45030dc",
+        "outputId": "051f343b-0133-419e-cca9-6dcb409a370f",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1138,12 +1138,12 @@
       ],
       "metadata": {
         "id": "-HedDa4b5Gor",
-        "outputId": "927cc1b9-d22b-4a43-d0da-8c10fc1dc4b9",
+        "outputId": "ae0e3b3c-1b2a-42fa-e46f-40f9664ac933",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 25,
+      "execution_count": 24,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1160,7 +1160,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 25
+          "execution_count": 24
         }
       ]
     },
@@ -1188,12 +1188,12 @@
       ],
       "metadata": {
         "id": "wIjXVU7i5smI",
-        "outputId": "5f66a09b-c43f-43d7-f3c8-4064f6ab9316",
+        "outputId": "75f79820-e990-41bd-ede6-2620168fc102",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 27,
+      "execution_count": 25,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1210,7 +1210,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 27
+          "execution_count": 25
         }
       ]
     },
@@ -1270,12 +1270,12 @@
       ],
       "metadata": {
         "id": "1b3D6o4e-kMx",
-        "outputId": "a4b53cc3-a1cf-4add-8552-76af57a07762",
+        "outputId": "1f646826-0e8f-4cfb-c941-3f816b467e8d",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 28,
+      "execution_count": 26,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1285,7 +1285,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 28
+          "execution_count": 26
         }
       ]
     },
@@ -1318,12 +1318,12 @@
       ],
       "metadata": {
         "id": "1370UbvBAgTx",
-        "outputId": "f45fcd2c-e4f5-4239-cdee-067afde2216f",
+        "outputId": "82ae5c83-38ed-4c63-dec7-55375b716b81",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 29,
+      "execution_count": 27,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1338,7 +1338,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 29
+          "execution_count": 27
         }
       ]
     },
@@ -1349,6 +1349,306 @@
       ],
       "metadata": {
         "id": "FrV8PymAA8kT"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Pooling is different than the former operations: It splits the image into tiny chunks, performs an operation on each chunk (that yields a single value), and puts the chunks together as the resulting image.\n",
+        "\n",
+        "![](https://github.com/rahiakela/deep-learning-research-and-practice/blob/main/deep-learning-with-pytorch-step-by-step/Part-II-Computer-Vision/images/pooling1.png?raw=1)\n",
+        "\n",
+        "Our input image is split into nine chunks, and we perform a simple max operation\n",
+        "(hence, max pooling) on each chunk (really, it is just taking the largest value in each\n",
+        "chunk). Then, these values are put together, in order, to produce a smaller\n",
+        "resulting image.\n",
+        "\n",
+        ">The larger the pooling kernel, the smaller the resulting image.\n",
+        "\n",
+        "In PyTorch, as usual, we have both forms: `F.max_pool2d()` and `nn.MaxPool2d`. \n",
+        "\n",
+        "Let’s\n",
+        "use the functional form to replicate the max pooling."
+      ],
+      "metadata": {
+        "id": "Yxve0AcE8dGP"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "pooled = F.max_pool2d(conv_padded, kernel_size=2)\n",
+        "pooled"
+      ],
+      "metadata": {
+        "id": "127inD4k97KY",
+        "outputId": "95a20718-a4b1-4550-f60c-53241c3e7c86",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 29,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[[[22., 23., 11.],\n",
+              "          [24.,  7.,  1.],\n",
+              "          [13., 13., 13.]]]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 29
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "And then let’s use the module version to illustrate the large four-by-four pooling."
+      ],
+      "metadata": {
+        "id": "9svGlR23_VEe"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "maxpool4 = nn.MaxPool2d(kernel_size=4)\n",
+        "pooled4 = maxpool4(conv_padded)\n",
+        "pooled4"
+      ],
+      "metadata": {
+        "id": "8tMu3Vk5_Vte",
+        "outputId": "aa2d2310-4ec5-497d-e3b9-39e567f3274f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 30,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[[[24.]]]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 30
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Besides max pooling, average pooling is also fairly common. As the name\n",
+        "suggests, it will output the average pixel value for each chunk. \n",
+        "\n",
+        "In PyTorch, we have\n",
+        "`F.avg_pool2d()` and `nn.AvgPool2d`."
+      ],
+      "metadata": {
+        "id": "NgJ8QWy-_0A6"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "pooled = F.avg_pool2d(conv_padded, kernel_size=2)\n",
+        "pooled"
+      ],
+      "metadata": {
+        "id": "_Yrn8wBE_8zR",
+        "outputId": "0758b75a-4da9-4c36-bd61-aec29f6a8474",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 31,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[[[-2.7500, -2.5000, -6.7500],\n",
+              "          [-3.7500,  0.7500, -5.0000],\n",
+              "          [-2.2500, -5.2500,  1.7500]]]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 31
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "avgpool4 = nn.AvgPool2d(kernel_size=4)\n",
+        "pooled4 = avgpool4(conv_padded)\n",
+        "pooled4"
+      ],
+      "metadata": {
+        "id": "4_DdnfoDAMx_",
+        "outputId": "d43d5cb3-e442-43ef-9f4a-563093dc807f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 32,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[[[-2.0625]]]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 32
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Can I use a stride of a different size?"
+      ],
+      "metadata": {
+        "id": "CNm1egCsAXcK"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "pooled = F.max_pool2d(conv_padded, kernel_size=2, stride=1)\n",
+        "pooled"
+      ],
+      "metadata": {
+        "id": "947Cu913AYAb",
+        "outputId": "c04ae15f-d579-48c1-8cb0-ae342e76850e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 33,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[[[22., 22., 23., 23., 11.],\n",
+              "          [24., 24., 23., 23.,  1.],\n",
+              "          [24., 24.,  7.,  1.,  1.],\n",
+              "          [13., 13., -1., 13., 13.],\n",
+              "          [13., 13., 13., 13., 13.]]]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 33
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##Flattening"
+      ],
+      "metadata": {
+        "id": "SOvlpuBiAsC0"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "It simply flattens a tensor, preserving the first\n",
+        "dimension such that we keep the number of data points while collapsing all other\n",
+        "dimensions."
+      ],
+      "metadata": {
+        "id": "Abg65oZUAs0l"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "flattened = nn.Flatten()(pooled)\n",
+        "flattened"
+      ],
+      "metadata": {
+        "id": "Mciiiw9JAx00",
+        "outputId": "ee01fa38-ce83-47ec-ace9-4e0f9820e8cf",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 35,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[22., 22., 23., 23., 11., 24., 24., 23., 23.,  1., 24., 24.,  7.,  1.,\n",
+              "          1., 13., 13., -1., 13., 13., 13., 13., 13., 13., 13.]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 35
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "We can also accomplish\n",
+        "the same thing using `view()`."
+      ],
+      "metadata": {
+        "id": "WfQT9HbRBD6C"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "pooled.view(1, -1)"
+      ],
+      "metadata": {
+        "id": "EaCFFSjuBHm_",
+        "outputId": "48f2ecf0-7ec8-4379-c842-ff057515de05",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 38,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[22., 22., 23., 23., 11., 24., 24., 23., 23.,  1., 24., 24.,  7.,  1.,\n",
+              "          1., 13., 13., -1., 13., 13., 13., 13., 13., 13., 13.]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 38
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##Typical Architecture"
+      ],
+      "metadata": {
+        "id": "JctalF_yBkwL"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "8l-OK9GrBlmc"
       }
     }
   ]
