--- a/deep-learning-with-pytorch-step-by-step/Part-II-Computer-Vision/02_convolutions.ipynb
+++ b/deep-learning-with-pytorch-step-by-step/Part-II-Computer-Vision/02_convolutions.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPmPzGJl1SR/qiRe35OLnyM",
+      "authorship_tag": "ABX9TyNzGYhxvzFZvoz825jXcLIE",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -67,7 +67,7 @@
       ],
       "metadata": {
         "id": "iiQ_qcSp_Uq6",
-        "outputId": "9baaa3d2-5647-4e74-85f4-a68bf522aae2",
+        "outputId": "eb6a1b08-9aa7-422a-980b-590b61304108",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 17
@@ -108,7 +108,7 @@
       ],
       "metadata": {
         "id": "6EwSrmrQ_cxf",
-        "outputId": "a3855735-cb25-4e76-c8fd-5569a7167f19",
+        "outputId": "f83ba4cc-c4e9-4f3b-b9bb-be456cf3edb0",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -196,7 +196,7 @@
       ],
       "metadata": {
         "id": "jPyifdt-AUSX",
-        "outputId": "5178bd85-daa7-4278-8476-4e9a67fca608",
+        "outputId": "09a1cde4-3fd3-4ea7-ae81-b1d041afdb0f",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -231,7 +231,7 @@
       ],
       "metadata": {
         "id": "oiO3F9UGFO9G",
-        "outputId": "e68b2fa9-8136-4247-dba8-aa8a4262bee0",
+        "outputId": "346ebd6b-e10a-48d9-a1bc-aedfe55c2369",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -281,7 +281,7 @@
       ],
       "metadata": {
         "id": "CVEwetTtF1H2",
-        "outputId": "e11d74d5-c9c2-486d-ae01-7a65985bd0a3",
+        "outputId": "f1e682a6-c5d5-4a57-efc3-91e98847e752",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -367,7 +367,7 @@
       ],
       "metadata": {
         "id": "tu1Xmj6HJOyX",
-        "outputId": "2b826b6c-29e6-48b2-9cd7-42072eba619e",
+        "outputId": "4331f01f-7693-491b-ede5-9cd0585861f4",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -437,7 +437,7 @@
       ],
       "metadata": {
         "id": "zcWMNoMCK5w_",
-        "outputId": "601bae47-6473-4c4e-86f5-5180a2b629da",
+        "outputId": "738fe935-db38-40ca-b7da-796c03445c45",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -557,7 +557,7 @@
       ],
       "metadata": {
         "id": "Fm6TCTCpYfRF",
-        "outputId": "34c33d7d-be60-49ac-caf7-84c1d9b89ccd",
+        "outputId": "f3a3153b-347f-4430-e98a-eeda42d77c7c",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -596,7 +596,7 @@
       ],
       "metadata": {
         "id": "UxDu6pa1ZwRu",
-        "outputId": "a7979750-ed3e-460d-8e39-46098a65cf07",
+        "outputId": "9e0422a3-8ce1-4e28-dc38-fe56a599a0e2",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -607,10 +607,10 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "tensor([[[[-2.3728, -1.3317, -2.7728, -5.1623],\n",
-              "          [-2.2198, -5.3178, -4.2968, -2.4332],\n",
-              "          [-3.4857, -2.5025, -0.6904, -2.0167],\n",
-              "          [-2.6422, -4.2359, -1.5154, -0.9297]]]],\n",
+              "tensor([[[[-3.1584, -3.6587, -3.3084, -1.9776],\n",
+              "          [-1.6495, -0.7789, -3.8846, -2.4516],\n",
+              "          [-6.4975, -4.3493, -3.1753, -3.6608],\n",
+              "          [-5.0802, -1.0271, -2.6073, -1.0769]]]],\n",
               "       grad_fn=<ConvolutionBackward0>)"
             ]
           },
@@ -646,7 +646,7 @@
       ],
       "metadata": {
         "id": "-tkVCkuuasJi",
-        "outputId": "ca214170-a737-4544-c424-49ea25a21375",
+        "outputId": "23cf120e-8b98-4444-c80c-1e7bdf7ccf28",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -657,15 +657,15 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "tensor([[[[-2.7091, -1.5468, -1.5830,  2.2820],\n",
-              "          [ 1.0947,  3.3581, -2.6535, -0.7231],\n",
-              "          [-2.3230, -2.0331, -1.5482, -1.1157],\n",
-              "          [-1.6571,  1.7232, -0.3608,  1.1142]],\n",
+              "tensor([[[[ 2.5559,  1.6035,  0.2515, -1.0625],\n",
+              "          [-1.8400, -2.9293,  2.6575,  1.8039],\n",
+              "          [ 1.3645,  3.5655,  1.4484,  0.7340],\n",
+              "          [-0.8595,  1.0977, -0.7592, -1.5410]],\n",
               "\n",
-              "         [[ 2.8025,  6.5085,  5.1363,  6.2798],\n",
-              "          [ 5.4482,  3.0193,  5.0466,  7.4039],\n",
-              "          [ 5.7044,  7.6669,  5.3536,  5.1414],\n",
-              "          [ 5.4464,  5.2953,  2.7431,  2.8355]]]],\n",
+              "         [[ 3.4871,  3.6961,  3.2884,  5.1495],\n",
+              "          [ 4.2876,  5.7939,  5.4350,  3.7492],\n",
+              "          [ 7.8516,  5.2071,  3.2165,  4.2438],\n",
+              "          [ 5.1253,  4.9019,  4.3800,  1.6612]]]],\n",
               "       grad_fn=<ConvolutionBackward0>)"
             ]
           },
@@ -681,7 +681,7 @@
       ],
       "metadata": {
         "id": "ToKEQ1v1a_fp",
-        "outputId": "d0c414b3-ff8d-481a-8441-85fd678eb134",
+        "outputId": "3bf7e8e5-1180-4ec9-d33e-b2b473e4d1bc",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -693,14 +693,14 @@
           "data": {
             "text/plain": [
               "Parameter containing:\n",
-              "tensor([[[[ 0.2363,  0.2740, -0.3291],\n",
-              "          [-0.1401,  0.0146, -0.2966],\n",
-              "          [ 0.0932,  0.2671, -0.2277]]],\n",
+              "tensor([[[[-0.2008, -0.3166,  0.2790],\n",
+              "          [ 0.0693,  0.1972,  0.1449],\n",
+              "          [-0.2383,  0.0989,  0.0931]]],\n",
               "\n",
               "\n",
-              "        [[[-0.1754,  0.1838,  0.0351],\n",
-              "          [ 0.1815,  0.2520,  0.2026],\n",
-              "          [-0.1517,  0.2383,  0.2876]]]], requires_grad=True)"
+              "        [[[ 0.2917, -0.1087, -0.0920],\n",
+              "          [ 0.2168,  0.2777, -0.2537],\n",
+              "          [ 0.0901,  0.2887,  0.2582]]]], requires_grad=True)"
             ]
           },
           "metadata": {},
@@ -728,7 +728,7 @@
       ],
       "metadata": {
         "id": "uzMNjIh6dMBq",
-        "outputId": "77d37efe-559e-43c7-c46c-00a52c3d8ae9",
+        "outputId": "edce83d1-1a0e-4588-8e00-623a7faa7eca",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -757,7 +757,7 @@
       ],
       "metadata": {
         "id": "b5TEqL4ud8zW",
-        "outputId": "403040ba-90f4-402a-9253-158aea38f1ac",
+        "outputId": "d916d2db-4ae2-43eb-bb0f-d6d1fc2ccbcc",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -843,7 +843,7 @@
       ],
       "metadata": {
         "id": "NSgTQekvyu-3",
-        "outputId": "686bafac-b607-4ea5-eb89-8e03bae9981c",
+        "outputId": "e434a9b8-510b-40e0-e4aa-7ef3a512344b",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -918,7 +918,7 @@
       ],
       "metadata": {
         "id": "GIuPaIjY0dxq",
-        "outputId": "76ff1692-6bec-4476-8569-ec04df175866",
+        "outputId": "98790f29-3b90-4f5f-e0c7-ee8c9da7c07a",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -967,7 +967,7 @@
       ],
       "metadata": {
         "id": "wrfPCPMz1yCk",
-        "outputId": "98b28ee9-ad0a-4972-c71d-3e652228cd1e",
+        "outputId": "10c1423a-482c-42d7-d8e3-9a7c4d7d097e",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1023,7 +1023,7 @@
       ],
       "metadata": {
         "id": "JtIfohjj4Bss",
-        "outputId": "259c347e-4cb6-4e47-b3f9-e41704f97792",
+        "outputId": "4c6c1f17-a2a6-456a-8784-c11780079ff4",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1057,7 +1057,7 @@
       ],
       "metadata": {
         "id": "bTbOtd1_4el9",
-        "outputId": "69f5c0e9-9036-405a-edc0-10f7b29dce12",
+        "outputId": "d022ba58-931b-43cb-e8a8-39be7966aa1e",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1104,7 +1104,7 @@
       ],
       "metadata": {
         "id": "bE-tinAm44rs",
-        "outputId": "051f343b-0133-419e-cca9-6dcb409a370f",
+        "outputId": "657743d6-9fbd-411e-bc16-1c417332e826",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1138,7 +1138,7 @@
       ],
       "metadata": {
         "id": "-HedDa4b5Gor",
-        "outputId": "ae0e3b3c-1b2a-42fa-e46f-40f9664ac933",
+        "outputId": "f4b89821-b756-4c6b-d3da-0ca9d73243dc",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1188,7 +1188,7 @@
       ],
       "metadata": {
         "id": "wIjXVU7i5smI",
-        "outputId": "75f79820-e990-41bd-ede6-2620168fc102",
+        "outputId": "845eb91b-4579-4d70-beeb-97e1771df54d",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1270,7 +1270,7 @@
       ],
       "metadata": {
         "id": "1b3D6o4e-kMx",
-        "outputId": "1f646826-0e8f-4cfb-c941-3f816b467e8d",
+        "outputId": "288399f8-8314-425a-dcc9-a9ec12268e7b",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1318,7 +1318,7 @@
       ],
       "metadata": {
         "id": "1370UbvBAgTx",
-        "outputId": "82ae5c83-38ed-4c63-dec7-55375b716b81",
+        "outputId": "f8686d22-f33c-4275-8799-050345248598",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1382,12 +1382,12 @@
       ],
       "metadata": {
         "id": "127inD4k97KY",
-        "outputId": "95a20718-a4b1-4550-f60c-53241c3e7c86",
+        "outputId": "7aae340e-5f9a-4bd3-9731-b026e5bc2fd0",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 29,
+      "execution_count": 28,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1399,7 +1399,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 29
+          "execution_count": 28
         }
       ]
     },
@@ -1421,12 +1421,12 @@
       ],
       "metadata": {
         "id": "8tMu3Vk5_Vte",
-        "outputId": "aa2d2310-4ec5-497d-e3b9-39e567f3274f",
+        "outputId": "f4385e19-1f0c-4eb9-c719-98d850a1ed07",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 30,
+      "execution_count": 29,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1436,7 +1436,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 30
+          "execution_count": 29
         }
       ]
     },
@@ -1461,12 +1461,12 @@
       ],
       "metadata": {
         "id": "_Yrn8wBE_8zR",
-        "outputId": "0758b75a-4da9-4c36-bd61-aec29f6a8474",
+        "outputId": "71db1335-ecc7-4267-d2f9-49af961d5030",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 31,
+      "execution_count": 30,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1478,7 +1478,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 31
+          "execution_count": 30
         }
       ]
     },
@@ -1491,12 +1491,12 @@
       ],
       "metadata": {
         "id": "4_DdnfoDAMx_",
-        "outputId": "d43d5cb3-e442-43ef-9f4a-563093dc807f",
+        "outputId": "5fc1f2fa-3047-47cd-aa03-c89e6a689549",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 32,
+      "execution_count": 31,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1506,7 +1506,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 32
+          "execution_count": 31
         }
       ]
     },
@@ -1527,12 +1527,12 @@
       ],
       "metadata": {
         "id": "947Cu913AYAb",
-        "outputId": "c04ae15f-d579-48c1-8cb0-ae342e76850e",
+        "outputId": "24e73cf3-2a1e-48bb-c3df-f543e5885806",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 33,
+      "execution_count": 32,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1546,7 +1546,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 33
+          "execution_count": 32
         }
       ]
     },
@@ -1578,12 +1578,12 @@
       ],
       "metadata": {
         "id": "Mciiiw9JAx00",
-        "outputId": "ee01fa38-ce83-47ec-ace9-4e0f9820e8cf",
+        "outputId": "3ac8c930-d46e-4912-de42-9da1a7acbbea",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 35,
+      "execution_count": 33,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1594,7 +1594,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 35
+          "execution_count": 33
         }
       ]
     },
@@ -1615,12 +1615,12 @@
       ],
       "metadata": {
         "id": "EaCFFSjuBHm_",
-        "outputId": "48f2ecf0-7ec8-4379-c842-ff057515de05",
+        "outputId": "a0646386-c87f-4bc3-eb65-18ab4544673f",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 38,
+      "execution_count": 34,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1631,7 +1631,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 38
+          "execution_count": 34
         }
       ]
     },
@@ -1646,9 +1646,118 @@
     },
     {
       "cell_type": "markdown",
-      "source": [],
+      "source": [
+        "A typical architecture uses a sequence of one or more typical convolutional\n",
+        "blocks, with each block consisting of three operations:\n",
+        "\n",
+        "1. Convolution\n",
+        "2. Activation function\n",
+        "3. Pooling\n",
+        "\n",
+        "As images go through these operations, they will shrink in size.\n",
+        "\n",
+        "After the sequence of blocks, the image gets flattened: Hopefully, at this stage,\n",
+        "there is no loss of information occurring by considering each value in the flattened\n",
+        "tensor a feature on its own.\n",
+        "\n",
+        "If you think of it, what those typical convolutional blocks do is\n",
+        "akin to pre-processing images and converting them into\n",
+        "features."
+      ],
       "metadata": {
         "id": "8l-OK9GrBlmc"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "###LeNet-5"
+      ],
+      "metadata": {
+        "id": "SoYzyLmtDvdt"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "LeNet-5 is a seven-level convolutional neural network developed by Yann LeCun in\n",
+        "1998 to recognize hand-written digits in 28x28 pixel images—the famous MNIST\n",
+        "dataset!\n",
+        "\n",
+        "![](https://github.com/rahiakela/deep-learning-research-and-practice/blob/main/deep-learning-with-pytorch-step-by-step/Part-II-Computer-Vision/images/architecture_lenet.png?raw=1)\n",
+        "\n",
+        "Adapting LeNet-5 to today’s standards, it could be implemented like this:"
+      ],
+      "metadata": {
+        "id": "mxNhaZqrDwNl"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "lenet = nn.Sequential()\n",
+        "\n",
+        "###### Featurizer ##########\n",
+        "# Block 1: 1@28x28 -> 6@28x28 -> 6@14x14\n",
+        "lenet.add_module(\"C1\", nn.Conv2d(in_channels=1, out_channels=5, kernel_size=5, padding=2))\n",
+        "lenet.add_module(\"func1\", nn.ReLU())\n",
+        "lenet.add_module(\"S2\", nn.MaxPool2d(kernel_size=2))\n",
+        "\n",
+        "# Block 2: 6@14x14 -> 16@10x10 -> 16@5x5\n",
+        "lenet.add_module(\"C3\", nn.Conv2d(in_channels=6, out_channels=16, kernel_size=5))\n",
+        "lenet.add_module(\"func2\", nn.ReLU())\n",
+        "lenet.add_module(\"S4\", nn.MaxPool2d(kernel_size=2))\n",
+        "\n",
+        "# Block 3: 16@5x5 -> 120@1x1\n",
+        "lenet.add_module(\"C3\", nn.Conv2d(in_channels=16, out_channels=120, kernel_size=5))\n",
+        "lenet.add_module(\"func3\", nn.ReLU())\n",
+        "\n",
+        "# Flattening\n",
+        "lenet.add_module(\"flatten\", nn.Flatten())\n",
+        "\n",
+        "###### Classification ##########\n",
+        "# Hidden Layer\n",
+        "lenet.add_module(\"F6\", nn.Linear(in_features=120, out_features=84))\n",
+        "lenet.add_module(\"func4\", nn.ReLU())\n",
+        "# Output Layer\n",
+        "lenet.add_module(\"OUTPUT\", nn.Linear(in_features=84, out_features=10))"
+      ],
+      "metadata": {
+        "id": "5D96gCAWFiT-"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "LeNet-5 used three convolutional blocks, although the last one does not have a\n",
+        "max pooling, because the convolution already produces a single pixel.\n",
+        "\n",
+        "Then, these 120 values (or features) are flattened and fed to a typical hidden layer\n",
+        "with 84 units. \n",
+        "\n",
+        "The last step is, obviously, the output layer, which produces ten\n",
+        "logits to be used for digit classification (from 0 to 9, there are ten classes)."
+      ],
+      "metadata": {
+        "id": "AHf-VodqHllp"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##Multiclass Classification"
+      ],
+      "metadata": {
+        "id": "zQBdv5EHH1Gl"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "MUOmv1jzH2Sz"
       }
     }
   ]
