--- a/deep-learning-with-pytorch-step-by-step/Part-II-Computer-Vision/02_convolutions.ipynb
+++ b/deep-learning-with-pytorch-step-by-step/Part-II-Computer-Vision/02_convolutions.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNInb+xFixrn6A83g0PY97p",
+      "authorship_tag": "ABX9TyNQF8Q8tOwILFsbaxHcwTQ6",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -67,7 +67,7 @@
       ],
       "metadata": {
         "id": "iiQ_qcSp_Uq6",
-        "outputId": "011fee99-61de-4239-8889-843403062b6e",
+        "outputId": "c67802b2-7b85-4d3d-f371-fa481d78b440",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 17
@@ -108,7 +108,7 @@
       ],
       "metadata": {
         "id": "6EwSrmrQ_cxf",
-        "outputId": "a5e9dfbb-3c31-4ec5-d7ad-99d1802d7329",
+        "outputId": "13644fb1-3b20-4e77-adc3-880df928e2df",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -196,7 +196,7 @@
       ],
       "metadata": {
         "id": "jPyifdt-AUSX",
-        "outputId": "2c7284ec-d9f1-42ed-b8d0-a188f16b12d6",
+        "outputId": "bee592cc-248d-4516-b41b-b870845e8085",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -231,7 +231,7 @@
       ],
       "metadata": {
         "id": "oiO3F9UGFO9G",
-        "outputId": "6e329a46-3302-4663-de82-0a9b0f5feafe",
+        "outputId": "d3872d7a-f65e-4365-d96e-ebbd4feb2248",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -281,7 +281,7 @@
       ],
       "metadata": {
         "id": "CVEwetTtF1H2",
-        "outputId": "830490b4-bc62-4f36-8dba-5e4b5974b0b7",
+        "outputId": "e08ab9a6-527e-4492-f153-e912e562491a",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -367,7 +367,7 @@
       ],
       "metadata": {
         "id": "tu1Xmj6HJOyX",
-        "outputId": "2740c93b-3d48-48e3-e1bf-b130f63f3884",
+        "outputId": "6096a51a-79dc-4f56-b92c-a0e25ffed183",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -437,7 +437,7 @@
       ],
       "metadata": {
         "id": "zcWMNoMCK5w_",
-        "outputId": "df0f9e80-a69e-445c-8273-0e0b5cd62fef",
+        "outputId": "3abc7c01-5ffa-4d41-f2ea-ee811aad3e5f",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -557,7 +557,7 @@
       ],
       "metadata": {
         "id": "Fm6TCTCpYfRF",
-        "outputId": "b9082aff-29a1-44e8-9f47-83f22e05abdb",
+        "outputId": "d20296f7-99df-4325-f914-eff139b7dcbd",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -596,7 +596,7 @@
       ],
       "metadata": {
         "id": "UxDu6pa1ZwRu",
-        "outputId": "dfa872a2-9cad-43f8-8c3f-3256504a4164",
+        "outputId": "ccdeaa53-c527-422f-f200-c969542671ff",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -607,10 +607,10 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "tensor([[[[ 1.8928,  0.7317, -3.5846, -3.4299],\n",
-              "          [ 0.2988, -1.7952, -0.5402, -0.3529],\n",
-              "          [ 2.6213,  0.5676,  1.6036,  1.3305],\n",
-              "          [-1.0847, -0.4933,  3.3298, -1.6720]]]],\n",
+              "tensor([[[[-0.4081, -4.6222, -0.5809,  0.6974],\n",
+              "          [-2.4433,  1.3871, -1.2171, -2.5232],\n",
+              "          [-0.9979, -2.9130, -0.7711, -1.6348],\n",
+              "          [ 0.0659, -1.0676, -1.8459, -0.2847]]]],\n",
               "       grad_fn=<ConvolutionBackward0>)"
             ]
           },
@@ -646,7 +646,7 @@
       ],
       "metadata": {
         "id": "-tkVCkuuasJi",
-        "outputId": "4eeae253-a66c-42f4-f100-0b407bd89950",
+        "outputId": "b8074fa2-4254-46dd-b6c9-2b47369eeb21",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -657,15 +657,15 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "tensor([[[[ 4.1724, -1.4560,  0.2630,  0.6030],\n",
-              "          [-2.9087,  0.6548,  0.2522, -1.1679],\n",
-              "          [ 0.5760, -1.7237,  1.1260,  1.7303],\n",
-              "          [ 1.0591,  2.6148,  2.6442,  1.2787]],\n",
+              "tensor([[[[-2.6734, -2.8978, -1.0945, -3.4684],\n",
+              "          [-3.6683, -3.1543, -1.9269, -3.9705],\n",
+              "          [-2.8788, -2.9514, -3.5058, -3.5335],\n",
+              "          [-2.1678, -4.9755, -4.1193, -1.8390]],\n",
               "\n",
-              "         [[ 0.9364, -0.3167,  3.0251,  1.7475],\n",
-              "          [ 2.6694,  2.9604,  4.3834,  1.5630],\n",
-              "          [ 5.7509,  3.3058,  2.5037,  0.7392],\n",
-              "          [ 4.5068, -0.8489,  0.1651, -0.3918]]]],\n",
+              "         [[ 1.5264, -0.7336,  3.6338,  1.2253],\n",
+              "          [ 1.8159,  2.0961,  0.9465,  1.5927],\n",
+              "          [-2.0365, -1.2044,  2.1472,  0.6819],\n",
+              "          [ 2.3466,  3.1702,  2.5423,  2.9676]]]],\n",
               "       grad_fn=<ConvolutionBackward0>)"
             ]
           },
@@ -681,7 +681,7 @@
       ],
       "metadata": {
         "id": "ToKEQ1v1a_fp",
-        "outputId": "29afeb76-d891-47b1-9823-00dec9e3de5f",
+        "outputId": "8782275c-12d1-4f6a-c686-5e4960bf223b",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -693,14 +693,14 @@
           "data": {
             "text/plain": [
               "Parameter containing:\n",
-              "tensor([[[[ 0.3242, -0.1097,  0.1079],\n",
-              "          [-0.0977,  0.1820,  0.0347],\n",
-              "          [ 0.0654, -0.1821, -0.2911]]],\n",
+              "tensor([[[[-0.1147, -0.1173, -0.0034],\n",
+              "          [-0.0737, -0.2704,  0.2210],\n",
+              "          [-0.1669, -0.2687,  0.1427]]],\n",
               "\n",
               "\n",
-              "        [[[-0.0021, -0.2141, -0.1005],\n",
-              "          [ 0.1617, -0.1808,  0.2901],\n",
-              "          [ 0.1469,  0.0055,  0.3263]]]], requires_grad=True)"
+              "        [[[ 0.2410,  0.1628,  0.2777],\n",
+              "          [-0.1583, -0.2280,  0.1118],\n",
+              "          [ 0.1168,  0.0923, -0.3250]]]], requires_grad=True)"
             ]
           },
           "metadata": {},
@@ -728,7 +728,7 @@
       ],
       "metadata": {
         "id": "uzMNjIh6dMBq",
-        "outputId": "8c38291e-5d0a-4b19-db16-d1bf8906d1dc",
+        "outputId": "8cd1c99f-d7a8-46bb-870d-b195c9b56f59",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -757,7 +757,7 @@
       ],
       "metadata": {
         "id": "b5TEqL4ud8zW",
-        "outputId": "5caf0b52-5d84-4850-d672-8e7b38f9b473",
+        "outputId": "4dcd5c49-b195-490d-96af-f87e71eef829",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -843,7 +843,7 @@
       ],
       "metadata": {
         "id": "NSgTQekvyu-3",
-        "outputId": "c3ce5bde-146c-4ee1-b38b-4dc86073def2",
+        "outputId": "93f601bf-bbf8-4122-a39f-eeced007f0bc",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -918,7 +918,7 @@
       ],
       "metadata": {
         "id": "GIuPaIjY0dxq",
-        "outputId": "85728d9d-6d20-4181-cd8c-1b909ab14375",
+        "outputId": "5a04a551-1e2c-4c44-e995-3b007c1efe6d",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -967,7 +967,7 @@
       ],
       "metadata": {
         "id": "wrfPCPMz1yCk",
-        "outputId": "8baf7cd2-58f9-4448-b3c5-3761a0313958",
+        "outputId": "4ad0ade7-7a70-4c39-bc76-e3837e09f5a4",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1023,7 +1023,7 @@
       ],
       "metadata": {
         "id": "JtIfohjj4Bss",
-        "outputId": "1fad550f-18a5-4e36-a714-a66a80bddcc8",
+        "outputId": "807add12-fea5-4c05-e3eb-7d8ee447e8b5",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1057,7 +1057,7 @@
       ],
       "metadata": {
         "id": "bTbOtd1_4el9",
-        "outputId": "b21e4dac-1c5c-49c0-9bce-fc190604ed15",
+        "outputId": "3f026f90-39ca-4c4d-c513-f3ac0ae670b3",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1104,7 +1104,7 @@
       ],
       "metadata": {
         "id": "bE-tinAm44rs",
-        "outputId": "6c2d452c-a3a9-47b7-9067-5de3ee1e630b",
+        "outputId": "41ab6617-3a1c-4b16-c2b1-1198455fd1cc",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1138,7 +1138,7 @@
       ],
       "metadata": {
         "id": "-HedDa4b5Gor",
-        "outputId": "ee317acb-7b66-4a09-e351-160d0fa806e8",
+        "outputId": "f0cb3413-4449-4537-988b-b66dc8dbac28",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1188,7 +1188,7 @@
       ],
       "metadata": {
         "id": "wIjXVU7i5smI",
-        "outputId": "251b4b72-54d0-4dcc-e6a5-5eb9790831ec",
+        "outputId": "f747ec5f-e4c3-40ae-f0ad-617ddeb08260",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1270,7 +1270,7 @@
       ],
       "metadata": {
         "id": "1b3D6o4e-kMx",
-        "outputId": "84adfe68-7fb5-4179-9f28-26e8789de973",
+        "outputId": "fc38ee39-d5a2-41d2-8ed2-a80890fcff58",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1318,7 +1318,7 @@
       ],
       "metadata": {
         "id": "1370UbvBAgTx",
-        "outputId": "a7938b89-9a1b-4850-fec7-f3e12841382d",
+        "outputId": "cbe8be33-1799-4182-9111-1f4452d74bb4",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1382,7 +1382,7 @@
       ],
       "metadata": {
         "id": "127inD4k97KY",
-        "outputId": "00601f85-0599-41bc-9515-69e307c206a0",
+        "outputId": "3edde8b4-a9d7-4253-f550-d2f90077e8c0",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1421,7 +1421,7 @@
       ],
       "metadata": {
         "id": "8tMu3Vk5_Vte",
-        "outputId": "c953aae1-1639-4c3f-92ca-b2244ee1ba86",
+        "outputId": "225de2d5-e0d6-496b-b207-6e96b6a870c4",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1461,7 +1461,7 @@
       ],
       "metadata": {
         "id": "_Yrn8wBE_8zR",
-        "outputId": "ea577b2b-c45b-4a57-b7ad-5d97fab968ae",
+        "outputId": "3f1967c2-6703-4b7d-bdb6-d0f4a8a056a1",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1491,7 +1491,7 @@
       ],
       "metadata": {
         "id": "4_DdnfoDAMx_",
-        "outputId": "fe95deff-c55a-4b64-bba3-6a8735a48d19",
+        "outputId": "4808235f-e534-447b-ee18-50a633417e72",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1527,7 +1527,7 @@
       ],
       "metadata": {
         "id": "947Cu913AYAb",
-        "outputId": "463947a2-ebce-4cf0-a78c-aa9985644075",
+        "outputId": "009060bc-74bd-46be-f54d-59d4ea7bf62d",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1578,7 +1578,7 @@
       ],
       "metadata": {
         "id": "Mciiiw9JAx00",
-        "outputId": "571d6eef-bc33-47c2-c51c-b6a0109187dc",
+        "outputId": "53919101-b922-480e-d63b-e3000100c821",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1615,7 +1615,7 @@
       ],
       "metadata": {
         "id": "EaCFFSjuBHm_",
-        "outputId": "4a0dbe10-7d35-44f4-df5c-db9aaa3891bc",
+        "outputId": "a55e0d22-b719-411c-d0be-7828942f37e7",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1814,7 +1814,7 @@
       ],
       "metadata": {
         "id": "V6ZYjv5ASPbl",
-        "outputId": "31f1ef4a-b17f-4c02-cab8-5873ca710b6a",
+        "outputId": "05b54bf6-91aa-48d0-ceb4-57a9c9405837",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 268
@@ -1930,9 +1930,218 @@
     },
     {
       "cell_type": "markdown",
-      "source": [],
+      "source": [
+        "In binary classification problems, the model would produce one logit, and one logit\n",
+        "only, for each data point.\n",
+        "\n",
+        "And we used a sigmoid function to map logits to probabilities. It was a\n",
+        "simple world :-)\n",
+        "\n",
+        "But a multiclass classification is more complex:\n",
+        "that is, we need to get log odds ratios for every possible class. \n",
+        "\n",
+        "In other words, we\n",
+        "need as many logits as there are classes.\n",
+        "\n",
+        "The softmax function returns, for each class, the contribution that a given class\n",
+        "had to the sum of odds ratios. The class with a higher odds ratio will have the\n",
+        "largest contribution and thus the highest probability.\n",
+        "\n",
+        "Since the softmax is computed using odds ratios instead of log\n",
+        "odds ratios (logits), we need to exponentiate the logits!\n",
+        "\n",
+        "$$\n",
+        "\\Large\n",
+        "\\begin{array}\n",
+        "& z & = \\text{logit}(p) & = \\text{log odds ratio }(p) & = \\text{log}\\left(\\frac{p}{1-p}\\right)\n",
+        "\\\\\n",
+        "e^z & = e^{\\text{logit}(p)} & = \\text{odds ratio }(p) & = \\left(\\frac{p}{1-p}\\right)\n",
+        "\\end{array}\n",
+        "$$\n",
+        "\n",
+        "The softmax formula itself is quite simple:\n",
+        "\n",
+        "$$\n",
+        "\\Large\n",
+        "\\text{softmax}(z_i) = \\frac{e^{z_i}}{\\sum_{c=0}^{N_c-1}{e^{z_c}}}\n",
+        "$$\n",
+        "\n",
+        "In our example, we have three classes, so our model\n",
+        "needs to output three logits $(z_0, z_1, z_2)$.\n",
+        "\n",
+        "$$\n",
+        "\\Large\n",
+        "\\text{softmax}(z) = \\left[\\frac{e^{z_0}}{e^{z_0}+e^{z_1}+e^{z_2}},\\frac{e^{z_1}}{e^{z_0}+e^{z_1}+e^{z_2}},\\frac{e^{z_2}}{e^{z_0}+e^{z_1}+e^{z_2}}\\right]\n",
+        "$$\n",
+        "\n",
+        "Simple, right? Let’s see it in code now."
+      ],
       "metadata": {
         "id": "Ud9Cm5-_UpLE"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "logits = torch.tensor([1.3863, 0.0000, -0.6931])\n",
+        "\n",
+        "# We exponentiate the logits to get the corresponding odds ratios\n",
+        "odds_ratios = torch.exp(logits)\n",
+        "odds_ratios"
+      ],
+      "metadata": {
+        "id": "BqBNi_jwZ8hQ",
+        "outputId": "ea2400a0-5074-4e8a-e84e-694bda863cf2",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 40,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([4.0000, 1.0000, 0.5000])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 40
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "So we take these\n",
+        "odds and add them together, and then compute each class' contribution to the\n",
+        "sum:"
+      ],
+      "metadata": {
+        "id": "1BGQLQUWaVhC"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "softmaxed = odds_ratios / odds_ratios.sum()\n",
+        "softmaxed"
+      ],
+      "metadata": {
+        "id": "xNNCa6oRaWMD",
+        "outputId": "d9cdefdf-5161-4d52-f58c-446c9a9bac09",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 41,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([0.7273, 0.1818, 0.0909])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 41
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Voilà! Our logits were softmaxed: The probabilities are proportional to the odds\n",
+        "ratios. \n",
+        "\n",
+        "This data point most likely belongs to the first class since it has a probability\n",
+        "of `72.73%`.\n",
+        "\n",
+        "PyTorch\n",
+        "provides the typical implementations: functional (`F.softmax()`) and module\n",
+        "(`nn.Softmax`):"
+      ],
+      "metadata": {
+        "id": "Q4oRHiE7ajB0"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "nn.Softmax(dim=-1)(logits)"
+      ],
+      "metadata": {
+        "id": "IfxB53jkaqUc",
+        "outputId": "6c902c9d-c1ec-4a48-a88e-08c1f10c4415",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 42,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([0.7273, 0.1818, 0.0909])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 42
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "F.softmax(logits, dim=-1)"
+      ],
+      "metadata": {
+        "id": "cbQrD9Pja1H8",
+        "outputId": "e254b30e-a410-4e91-fbf6-cc82c84846f2",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 43,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([0.7273, 0.1818, 0.0909])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 43
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "In general, our models will produce logits with the shape (number of\n",
+        "data points, number of classes), so the right dimension to apply softmax to is the\n",
+        "last one (`dim=-1`)."
+      ],
+      "metadata": {
+        "id": "fEor6RIGbCVv"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "####LogSoftmax"
+      ],
+      "metadata": {
+        "id": "HaH_KJtAbSiJ"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "awfzVKepbXl0"
       }
     }
   ]
