--- a/deep-learning-with-pytorch-step-by-step/Part-II-Computer-Vision/03_better_convolutions.ipynb
+++ b/deep-learning-with-pytorch-step-by-step/Part-II-Computer-Vision/03_better_convolutions.ipynb
@@ -4,8 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "toc_visible": true,
-      "authorship_tag": "ABX9TyOk6RSZQYeSvWBX+CNzJLn8",
+      "authorship_tag": "ABX9TyMlCxjHdFZKFDDWLMNb7XZV",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -48,7 +47,7 @@
         "\n",
         "Here are some examples of its images, one for each pose.\n",
         "\n",
-        "![](images/download.png)"
+        "![](https://github.com/rahiakela/deep-learning-research-and-practice/blob/main/deep-learning-with-pytorch-step-by-step/Part-II-Computer-Vision/images/download.png?raw=1)"
       ],
       "metadata": {
         "id": "KIj__-HokOxT"
@@ -75,7 +74,7 @@
           "height": 17
         },
         "id": "sJOR-0hwlwr7",
-        "outputId": "d1ed6f37-cd83-47ac-b03a-2302a53ab5b8"
+        "outputId": "a723f212-0304-4334-e434-fd153739756b"
       },
       "execution_count": 1,
       "outputs": [
@@ -115,7 +114,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "wlXOl_Holz6M",
-        "outputId": "594e8910-3491-4892-958b-8026cf259136"
+        "outputId": "08d415d4-6631-4d3f-d589-fc0665b3b112"
       },
       "execution_count": 2,
       "outputs": [
@@ -153,6 +152,29 @@
         "id": "54a8hhq8l2AK"
       },
       "execution_count": 3,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# This may take a couple of minutes...\n",
+        "download_rps()"
+      ],
+      "metadata": {
+        "id": "0A-YvvDpDl-1"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "fig = figure1()"
+      ],
+      "metadata": {
+        "id": "iDxyNz9iEDxw"
+      },
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -194,12 +216,7 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "!mkdir rps\n",
-        "!mkdir rps/paper\n",
-        "!mkdir rps/rock\n",
-        "!mkdir rps/scissors"
-      ],
+      "source": [],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -207,7 +224,7 @@
         "id": "BoAY6HLooA8J",
         "outputId": "feb46c1b-3b55-45b4-cfe3-6ee94393ba13"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
