--- a/deep-learning-with-pytorch-step-by-step/Part-II-Computer-Vision/03_better_convolutions.ipynb
+++ b/deep-learning-with-pytorch-step-by-step/Part-II-Computer-Vision/03_better_convolutions.ipynb
@@ -4,7 +4,8 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMlCxjHdFZKFDDWLMNb7XZV",
+      "toc_visible": true,
+      "authorship_tag": "ABX9TyPEncIkIqzmAu2QxgvzFuV3",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -74,7 +75,7 @@
           "height": 17
         },
         "id": "sJOR-0hwlwr7",
-        "outputId": "a723f212-0304-4334-e434-fd153739756b"
+        "outputId": "6e7f9f86-7f4f-483f-b332-821471a2d092"
       },
       "execution_count": 1,
       "outputs": [
@@ -114,7 +115,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "wlXOl_Holz6M",
-        "outputId": "08d415d4-6631-4d3f-d589-fc0665b3b112"
+        "outputId": "f4606e77-6c3b-42d3-da38-bd3e4fdd8832"
       },
       "execution_count": 2,
       "outputs": [
@@ -145,8 +146,7 @@
         "from torchvision.datasets import ImageFolder\n",
         "from torch.optim.lr_scheduler import StepLR, ReduceLROnPlateau, MultiStepLR, CyclicLR, LambdaLR\n",
         "\n",
-        "from stepbystep.v2 import StepByStep\n",
-        "from data_generation.rps import download_rps"
+        "from stepbystep.v2 import StepByStep"
       ],
       "metadata": {
         "id": "54a8hhq8l2AK"
@@ -157,25 +157,78 @@
     {
       "cell_type": "code",
       "source": [
-        "# This may take a couple of minutes...\n",
-        "download_rps()"
+        "from google.colab import drive\n",
+        "drive.mount('/content/gdrive')"
       ],
       "metadata": {
-        "id": "0A-YvvDpDl-1"
+        "id": "0A-YvvDpDl-1",
+        "outputId": "7b2f0b43-4cfd-4ec2-fbf2-bcc8829eb3db",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Mounted at /content/gdrive\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import os\n",
+        "# content/gdrive/My Drive/Kaggle is the path where kaggle.json is  present in the Google Drive\n",
+        "os.environ['KAGGLE_CONFIG_DIR'] = \"/content/gdrive/MyDrive/kaggle-keys\""
+      ],
+      "metadata": {
+        "id": "iDxyNz9iEDxw"
+      },
+      "execution_count": 5,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "fig = figure1()"
+        "%%shell\n",
+        "\n",
+        "# download dataset from kaggle> URL: https://www.kaggle.com/datasets/sanikamal/rock-paper-scissors-dataset\n",
+        "kaggle datasets download -d sanikamal/rock-paper-scissors-dataset\n",
+        "\n",
+        "unzip -qq rock-paper-scissors-dataset.zip\n",
+        "rm -rf rock-paper-scissors-dataset.zip"
       ],
       "metadata": {
-        "id": "iDxyNz9iEDxw"
+        "id": "imNthwCGdJTw",
+        "outputId": "5183035a-6efe-49cc-b9c8-735a203ce4d7",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Downloading rock-paper-scissors-dataset.zip to /content\n",
+            "100% 451M/452M [00:14<00:00, 37.5MB/s]\n",
+            "100% 452M/452M [00:14<00:00, 33.5MB/s]\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": []
+          },
+          "metadata": {},
+          "execution_count": 6
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -216,35 +269,76 @@
     },
     {
       "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "BoAY6HLooA8J",
-        "outputId": "feb46c1b-3b55-45b4-cfe3-6ee94393ba13"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "mkdir: cannot create directory ‘rps’: File exists\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
       "source": [
         "temp_transform = Compose([Resize(28), ToTensor()])\n",
-        "temp_dataset = ImageFolder(root=\"rps\", transform=temp_transform)"
+        "temp_dataset = ImageFolder(root=\"Rock-Paper-Scissors\", transform=temp_transform)"
       ],
       "metadata": {
         "id": "-04BquM1nbe4"
       },
-      "execution_count": null,
+      "execution_count": 7,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "temp_dataset[0][0].shape, temp_dataset[0][1]"
+      ],
+      "metadata": {
+        "id": "vSFRh8T8eP3G",
+        "outputId": "f00bfbf6-bb2b-4af2-bbd1-ffe01fb224b1",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(torch.Size([3, 28, 28]), 0)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 8
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "###Standardization"
+      ],
+      "metadata": {
+        "id": "VJF-KE8Venjn"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "To standardize data points, we need to learn their mean and standard deviation\n",
+        "first.\n",
+        "\n",
+        "To compute these, we need to load the data.\n",
+        "\n",
+        "The good thing is, we have\n",
+        "a (temporary) dataset with the resized images already! We’re only missing a data\n",
+        "loader."
+      ],
+      "metadata": {
+        "id": "g_figy2Eeobq"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "temp_loader = DataLoader(temp_dataset, batch_size=16)"
+      ],
+      "metadata": {
+        "id": "6VReWpJ_e1_S"
+      },
+      "execution_count": 9,
       "outputs": []
     }
   ]
