--- a/deep-learning-with-pytorch-step-by-step/Part-II-Computer-Vision/03_better_convolutions.ipynb
+++ b/deep-learning-with-pytorch-step-by-step/Part-II-Computer-Vision/03_better_convolutions.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNG+vpJsp3XdMYHhUdY6xVj",
+      "authorship_tag": "ABX9TyO+3HW3sSaJARz93bNP0Ndq",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -75,7 +75,7 @@
           "height": 17
         },
         "id": "sJOR-0hwlwr7",
-        "outputId": "68cebf65-56b4-466f-832b-0611f2be1af4"
+        "outputId": "aa48f72e-f23a-4feb-d301-66998133667e"
       },
       "execution_count": 1,
       "outputs": [
@@ -115,7 +115,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "wlXOl_Holz6M",
-        "outputId": "166b3ec4-d9e1-4f32-aeac-7d7787793dee"
+        "outputId": "427d3fb1-8c6d-4c14-d806-6bf35b752205"
       },
       "execution_count": 2,
       "outputs": [
@@ -162,7 +162,7 @@
       ],
       "metadata": {
         "id": "0A-YvvDpDl-1",
-        "outputId": "79ced407-69e5-4d47-c73b-db3330512ffc",
+        "outputId": "e115ea7a-0bd5-485c-a3be-429e694a166e",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -204,7 +204,7 @@
       ],
       "metadata": {
         "id": "imNthwCGdJTw",
-        "outputId": "6a0b50a7-c07f-4733-8cec-cd93a919b944",
+        "outputId": "31b4a389-4102-483b-cfb1-95c2975914a5",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -216,8 +216,8 @@
           "name": "stdout",
           "text": [
             "Downloading rock-paper-scissors-dataset.zip to /content\n",
-            " 97% 439M/452M [00:03<00:00, 142MB/s]\n",
-            "100% 452M/452M [00:04<00:00, 115MB/s]\n"
+            " 96% 436M/452M [00:03<00:00, 180MB/s]\n",
+            "100% 452M/452M [00:03<00:00, 145MB/s]\n"
           ]
         },
         {
@@ -277,7 +277,7 @@
       "metadata": {
         "id": "-04BquM1nbe4"
       },
-      "execution_count": 15,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -287,7 +287,7 @@
       ],
       "metadata": {
         "id": "vSFRh8T8eP3G",
-        "outputId": "e404bf5c-9353-482b-db13-02da0431def9",
+        "outputId": "dd21408e-b7e9-4811-97ef-d46541c727c1",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -395,7 +395,7 @@
       ],
       "metadata": {
         "id": "EOtdYsT9m5_R",
-        "outputId": "b5525198-a0ac-474c-f548-111fe994a998",
+        "outputId": "f4ce5621-76d3-4e8c-c0a4-f292a6afdb97",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -434,7 +434,7 @@
       ],
       "metadata": {
         "id": "9O780X1Spj7g",
-        "outputId": "042f826f-3935-43d7-8f84-edaa84152d7c",
+        "outputId": "bb858dd4-40eb-4f05-f024-993da3bfbca8",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -505,7 +505,7 @@
       ],
       "metadata": {
         "id": "0K8vqQyFqiHG",
-        "outputId": "6565b89b-8a22-46d6-a028-c5210beaa0e7",
+        "outputId": "a058457a-ce66-4ddd-b7cd-c1de858096b7",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -558,7 +558,7 @@
       "metadata": {
         "id": "QW0r77mzsKad"
       },
-      "execution_count": 16,
+      "execution_count": 15,
       "outputs": []
     },
     {
@@ -581,13 +581,13 @@
       ],
       "metadata": {
         "id": "o2U5Fw96tLWj",
-        "outputId": "74b3a89d-15ae-449f-9f00-3542d4b9a98e",
+        "outputId": "06b747a4-4679-4e3f-a9c9-8288af8cd5f7",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 173
         }
       },
-      "execution_count": 17,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "display_data",
@@ -612,9 +612,150 @@
     },
     {
       "cell_type": "markdown",
-      "source": [],
+      "source": [
+        "Convolving a three-channel filter over a three-channel image still produces a\n",
+        "single value.\n",
+        "\n",
+        "![](https://github.com/rahiakela/deep-learning-research-and-practice/blob/main/deep-learning-with-pytorch-step-by-step/Part-II-Computer-Vision/images/3channel1.png?raw=1)\n",
+        "\n",
+        "Adding up the results for each\n",
+        "channel produces the expected single value.\n",
+        "\n",
+        "![](https://github.com/rahiakela/deep-learning-research-and-practice/blob/main/deep-learning-with-pytorch-step-by-step/Part-II-Computer-Vision/images/3channel2.png?raw=1)\n",
+        "\n",
+        "We can also look at it in code."
+      ],
       "metadata": {
         "id": "n_yi7LIptqsz"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "regions = np.array([[[[5, 0, 8],\n",
+        "                      [1, 9, 5],\n",
+        "                      [6, 0, 2]],\n",
+        "                     [[0, 5, 4],\n",
+        "                      [8, 1, 9],\n",
+        "                      [4, 8, 1]],\n",
+        "                     [[4, 2, 0],\n",
+        "                      [6, 3, 0],\n",
+        "                      [5, 2, 8]]]])\n",
+        "regions.shape"
+      ],
+      "metadata": {
+        "id": "9VnF8htTmng4",
+        "outputId": "0f410dad-1f6d-4b95-990c-11098e48dce2",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(1, 3, 3, 3)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 17
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "three_channel_filter = np.array([[[[0, 3, 0],\n",
+        "                                   [1, 0, 1],\n",
+        "                                   [2, 1, 0]],\n",
+        "                                  [[2, 1, 0],\n",
+        "                                   [0, 3, 1],\n",
+        "                                   [1, -1, 0]],\n",
+        "                                  [[0, 1, 3],\n",
+        "                                   [-1, -2, 0],\n",
+        "                                   [2, 0, 1]]]])\n",
+        "three_channel_filter.shape"
+      ],
+      "metadata": {
+        "id": "Cxw0Q9IEm-iJ",
+        "outputId": "a86a69e8-07f2-4347-bb39-f2258d954512",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(1, 3, 3, 3)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 18
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "result = F.conv2d(torch.as_tensor(regions), torch.as_tensor(three_channel_filter))\n",
+        "result, result.shape"
+      ],
+      "metadata": {
+        "id": "NxFWwJLCnBKd",
+        "outputId": "6911bd92-d5f2-46df-90a5-d0b1bc5c4db5",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(tensor([[[[39]]]]), torch.Size([1, 1, 1, 1]))"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 19
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "What if I have two filters?\n",
+        "\n",
+        "![](https://github.com/rahiakela/deep-learning-research-and-practice/blob/main/deep-learning-with-pytorch-step-by-step/Part-II-Computer-Vision/images/3channel_filters1.png?raw=1)\n",
+        "\n",
+        "If you have two filters, and the input image has three channels, each filter has\n",
+        "three channels as well, and the output has two channels.\n",
+        "\n",
+        ">The convolution produces as many channels as there are filters.\n"
+      ],
+      "metadata": {
+        "id": "kC4qLRrFnYih"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##Fancier Model"
+      ],
+      "metadata": {
+        "id": "kDjJb_monknm"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "On1OaMBqnl5l"
       }
     }
   ]
